@@ -14,34 +14,30 @@
  * limitations under the License.
  */
 package net.hasor.web.startup;
+import net.hasor.core.AppContext;
+import net.hasor.core.Hasor;
+import net.hasor.web.ServletVersion;
+import net.hasor.web.WebAppContext;
+import net.hasor.web.binder.FilterPipeline;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
+import javax.servlet.*;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
 import java.io.IOException;
 import java.util.Enumeration;
 import java.util.HashMap;
 import java.util.Map;
-import javax.servlet.Filter;
-import javax.servlet.FilterChain;
-import javax.servlet.FilterConfig;
-import javax.servlet.ServletContext;
-import javax.servlet.ServletException;
-import javax.servlet.ServletRequest;
-import javax.servlet.ServletResponse;
-import javax.servlet.http.HttpServletRequest;
-import javax.servlet.http.HttpServletResponse;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-import net.hasor.core.AppContext;
-import net.hasor.core.Hasor;
-import net.hasor.web.WebAppContext;
-import net.hasor.web.binder.FilterPipeline;
 /**
  * 入口Filter，同一个应用程序只能实例化一个 RuntimeFilter 对象。
  * @version : 2013-3-25
  * @author 赵永春 (zyc@hasor.net)
  */
 public class RuntimeFilter implements Filter {
-    protected Logger       logger         = LoggerFactory.getLogger(getClass());
-    private WebAppContext  appContext     = null;
-    private FilterPipeline filterPipeline = null;
+    protected Logger         logger         = LoggerFactory.getLogger(getClass());
+    private   WebAppContext  appContext     = null;
+    private   FilterPipeline filterPipeline = null;
     //
     /**初始化过滤器，初始化会同时初始化FilterPipeline*/
     @Override
@@ -63,7 +59,11 @@ public class RuntimeFilter implements Filter {
         }
         this.filterPipeline.initPipeline(this.appContext, filterConfigMap);
         //
-        logger.info("RuntimeFilter started, context at {}", filterConfig.getServletContext().getContextPath());
+        if (ServletVersion.V2_5.le(this.appContext.getServletVersion())) {
+            logger.info("RuntimeFilter started, at {}", filterConfig.getServletContext().getServerInfo());
+        } else {
+            logger.info("RuntimeFilter started, context at {}", filterConfig.getServletContext().getServerInfo());
+        }
     }
     //
     /** 销毁 */
