@@ -1,6 +1,7 @@
 ﻿===== Hasor-Core v2.4.4 (2016-?)
 * 新增:
-    01.Hasor web部分新增支持文件上传功能(不依赖任何第三方包哦)。上传功能是从 apache fileupload 代码中精简优化得来。
+    01.宽泛的Servlet版本支持 servlet 2.3 到 servlet 3.1。如果容器支持 Servlet 3 那么 Hasor 会自动启用 Servlet 3.0 特性。
+    02.新增支持文件上传功能支持,如果容器环境为Servlet 3.x,那么文件上传时会自动启动异步上传(感谢:哎瑞！麓孩 提供的技术支持)。
 * 改进:
     01.otg.more包大瘦身,清理大量没有使用到的类和方法。
 
